# my-ccb

./: .env.example  .gitignore  Cargo.toml
assets/: warmup_questions.json
docker/: Dockerfile  entrypoint.sh
docs/: banner真包对比.md  多人共号链路分析.html  封号与会话相关性分析.md  封号机制-矛与盾分析.md  新号封号原因分析报告.md  盾vs矛-对比清单.md  真包-逐字抄录.md  虚拟形象升级方案.html  账号会话热度.html  账号每3分钟会话数.html  账号每5分钟会话数.html  账号每分钟会话数.html  身份模拟-改写字段说明.md  防封审计报告-2026-06-07.md
scripts/: warmer.py
sidecar/: egress.js  package.json
src/: config.rs  error.rs  main.rs
src/handler/: router.rs
src/model/: account.rs  api_token.rs  identity.rs  mod.rs  pricing.rs  usage.rs  warmup.rs
src/service/: account.rs  account_warmer.rs  client_guard.rs  gateway.rs  mod.rs  oauth_flow.rs  probe.rs  rewriter.rs  telemetry.rs  thinking_repair.rs  usage_recorder.rs
src/store/: account_store.rs  cache.rs  db.rs  memory.rs  mod.rs  redis.rs  token_store.rs  usage_store.rs  warmup_store.rs
src/tlsfp/: tlsfp.rs
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  api.ts  auth.tsx  index.css  main.tsx  router.ts  style.css
web/src/components/: Accounts.vue  Dashboard.vue  Layout.tsx  Login.vue  Settings.vue  Toaster.tsx  Tokens.vue  Usage.vue
web/src/components/accounts/: AccountFormDialog.tsx  OAuthFlowDialog.tsx  form.ts
web/src/components/inspira/: AuroraBackground.vue
web/src/components/magic/: aurora-text.tsx  blur-fade.tsx  border-beam.tsx  dot-pattern.tsx  magic-card.tsx  number-ticker.tsx  shimmer-button.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  dialog.tsx  input.tsx  (+5 more)
web/src/hooks/: usePolling.ts
web/src/lib/: format.ts  pricing.ts
web/src/pages/: Accounts.tsx  Login.tsx  Placeholder.tsx  Settings.tsx  Tokens.tsx  Usage.tsx  Warmup.tsx
