[package]
name = "claude-code-gateway"
version = "1.6.0"
edition = "2024"

[dependencies]
# HTTP
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["cors"] }
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
http-body-util = "0.1"

# Async
tokio = { version = "1", features = ["full"] }

# TLS
rustls = { path = "craftls/rustls", default-features = false, features = ["ring", "logging", "tls12"] }
tokio-rustls = "0.25"
webpki-roots = "0.26"
rustls-pki-types = "1"
static_init = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "postgres", "chrono", "any"] }

# Redis
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Crypto
ml-kem = "0.2.3"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
xxhash-rust = { version = "0.8", features = ["xxh64"] }
rand = "0.8"
hex = "0.4"
base64 = "0.22"
subtle = "2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Regex
regex = "1"
once_cell = "1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Proxy
tokio-socks = "0.5"

# HTTP Client
reqwest = { version = "=0.12.4", default-features = false, features = ["rustls-tls-manual-roots", "stream", "json", "socks"] }
scopeguard = "1"
dotenvy = "0.15"
futures-core = "0.3"
bytes = "1"

# Utilities
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
rust-embed = "8"

[patch.crates-io]
rustls = { path = "craftls/rustls" }
